[package]
name = "randomize"
description = "Randomization routines"
repository = "https://github.com/Lokathor/randomize"
version = "5.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
#default = ["getrandom"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["min_const_generics"] }
getrandom = { version = "0.2.10", optional = true }

[package.metadata.docs.rs]
all-features = true
